# SDL_2D_Fluids

./: CMakeLists.txt  main.c
include/: camera.h  particle.h  renderer.h  sph.h
src/: particle.c  renderer.c  sph.c
